[gd_scene load_steps=13 format=3 uid="uid://pljf87ndkbgv"]

[ext_resource type="Script" path="res://Assets/Scripts/Menu UI/pause_menu.gd" id="1_wmylh"]
[ext_resource type="Shader" path="res://Assets/Shaders/pause_menu.gdshader" id="1_xi54y"]
[ext_resource type="PackedScene" uid="uid://budlhdao2v8l0" path="res://Assets/Scenes/Menu UI/paused_volume_menu.tscn" id="3_4yri2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62lwy"]
bg_color = Color(0.655584, 0.0180515, 0.0179971, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 8
border_color = Color(0.45303, 0.00804746, 0.0080324, 1)
border_blend = true
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3
shadow_color = Color(0.292994, 0.00328483, 0.00326157, 1)
shadow_offset = Vector2(0, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qnfx"]
bg_color = Color(0.541176, 0.0117647, 0.0117647, 1)
border_width_bottom = 5
border_color = Color(0.286545, 0.00314213, 0.00311914, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.247059, 0.00392157, 0.00392157, 0.329412)
shadow_size = 3
shadow_offset = Vector2(2, 5)

[sub_resource type="Theme" id="Theme_cex7r"]
Button/styles/hover = SubResource("StyleBoxFlat_62lwy")
Button/styles/normal = SubResource("StyleBoxFlat_3qnfx")

[sub_resource type="Animation" id="Animation_1ejls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_picuf"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.886]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nn718"]
_data = {
"RESET": SubResource("Animation_1ejls"),
"blur": SubResource("Animation_picuf")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pahi5"]
shader = ExtResource("1_xi54y")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khpy3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_ekoyl"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_khpy3")

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cex7r")
script = ExtResource("1_wmylh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nn718")
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pahi5")
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 1151.0
offset_bottom = 645.0

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 417.0
offset_top = 263.0
offset_right = 755.0
offset_bottom = 390.0
theme = SubResource("Theme_ekoyl")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Volume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PausedVolumeMenu" parent="PanelContainer/VBoxContainer" instance=ExtResource("3_4yri2")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
